[project]
name = "python-graph-practice"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hirotoKirimaru", email = "nainaistar@gmail.com" }
]
dependencies = [
    "polars>=1.0.0",
    "plotly>=5.22.0",
    "kaleido>=0.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_graph_practice"]
